[package]
name = "rust_graphql_mongodb"
version = "0.1.0"
authors = ["shareeff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
futures = "0.1"  #"0.3.1" #0.1
juniper = "0.14.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

bson = "0.14.0"
mongodb = "0.4.0"
lazy_static = "1.4.0"

